Update active class and remove redundant parts

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <div class="container">
          <div class="row">
             <div class="navbar right">
-               <a href="index.html">Home</a>
-               <a href="about.html" class="active">About Us</a>
+               <a href="index.html" class="active">Home</a>
+               <a href="about.html">About Us</a>
                <a>Project</a>
             </div>
          </div>
