--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
       <div class="container">
          <div class="row">
             <div class="navbar right">
-               <a href="index.html" class="active">Home</a>
-               <a href="about.html">About Us</a>
+               <a href="index.html">Home</a>
+               <a href="about.html" class="active">About Us</a>
                <a>Project</a>
             </div>
          </div>
@@ -22,34 +22,14 @@
 
          <div class="row">
             <div class="content">
-               <!-- <div class="person">
-                  <div class="avatar"><img src="avatar-sample.jpg" alt="avatar"></div>
-                  <div class="info">
-                     <div class="name">Doan Tuyet Mai</div>
-                     <div class="description">ICT Department</div>
-                     <div class="description"><b>Email: </b>maidt.bi9162@st.usth.edu.vn</div>
-                  </div>
-               </div>
-
-               <div class="person">
-                  <div class="avatar"><img src="avatar-sample.jpg" alt="avatar"></div>
-                  <div class="info">
-                     <div class="name">Doan Tuyet Mai</div>
-                     <div class="description">ICT Department</div>
-                     <div class="description"><b>Email: </b>maidt.bi9162@st.usth.edu.vn</div>
-                  </div>
-               </div> -->
             </div>
          </div>
       </div>
    </body>
 
-   <!-- <script  src="members.json">
-
-   </script> -->
    <script>
       const container = document.querySelector('.content');
-      fetch("./members.json")
+      fetch("./data/members.json")
       .then(response => {
          return response.json();
       })
@@ -59,7 +39,7 @@
             div.className = 'person';
             div.innerHTML=
             `
-               <div class="avatar"><img src="avatar-sample.jpg" alt="avatar"></div>
+               <div class="avatar"><img src="data/avatar-sample.jpg" alt="avatar"></div>
                <div class="info">
                   <div class="name">${data[i].name}</div>
                   <div class="description">ICT Department</div>
