--- a/about.html
+++ b/about.html
@@ -8,17 +8,19 @@
 
    <body>
       <div class="container">
-         <div class="row">
-            <div class="navbar right">
-               <a href="index.html">Home</a>
-               <a href="about.html" class="active">About Us</a>
-               <a>Project</a>
+         <!-- <div class="header"> -->
+            <div class="row">
+               <div class="navbar right">
+                  <a href="index.html">Home</a>
+                  <a href="about.html" class="active">About Us</a>
+                  <a>Project</a>
+               </div>
             </div>
-         </div>
-         
-         <div class="row">
-            <div class="title">About Us</div>
-         </div>
+            
+            <div class="row">
+               <div class="title">About Us</div>
+            </div>
+         <!-- </div> -->
 
          <div class="row">
             <div class="content">
