Gallery with responsive image gridgit add *git add *! Yayyyyyyygit add *!

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
          <div class="row">
             <div class="navbar">
-               <a href="index.html">Website 1</a>
-               <a class="active">Website 2</a>
+               <a class="active">Website 1</a>
+               <a>Website 2</a>
                <a>Website 3</a>
                <a>Website 4</a>
                <a>Website 5</a>
