--- a/website3.html
+++ b/website3.html
@@ -25,9 +25,9 @@
 
          <div class="row">
             <div class="navbar">
-               <a href="index.html" class="active">Website 1</a>
+               <a href="index.html">Website 1</a>
                <a>Website 2</a>
-               <a href="website3.html">Website 3</a>
+               <a href="website3.html" class="active">Website 3</a>
                <a>Website 4</a>
                <a>Website 5</a>
             </div>
