Update about page

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                <div class="avatar"><img src=${data[i].avatar} alt="avatar"></div>
                <div class="info">
                   <div class="name">${data[i].name}</div>
-                  <div class="description">ICT Department</div>
+                  <div class="description"><b>Student ID: </b>${data[i].student_id}</div>
                   <div class="description"><b>Email: </b>${data[i].email}</div>
                </div>
             `
