Replace email by github in About

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                <div class="info">
                   <div class="name">${data[i].name}</div>
                   <div class="description"><b>Student ID: </b>${data[i].student_id}</div>
-                  <div class="description"><b>Email: </b>${data[i].email}</div>
+                  <div class="description"><b>Github: </b>${data[i].github}</div>
                </div>
             `
             container.appendChild(div);
