--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-      <link href='style.css' rel='stylesheet'>
+      <link href='view/style.css' rel='stylesheet'>
    </head>
 
    <body>
@@ -27,7 +27,7 @@
             <div class="navbar">
                <a href="index.html" class="active">Website 1</a>
                <a>Website 2</a>
-               <a href="website3.html">Website 3</a>
+               <a href="view/website3.html">Website 3</a>
                <a>Website 4</a>
                <a>Website 5</a>
             </div>
