Add general function for display images (#9)

--- a/index.html
+++ b/index.html
@@ -41,37 +41,8 @@
       </div>
    </body>
 
+   <script src="view/displayImages.js"></script>
    <script>
-      const pcontainer = document.querySelector('.content');
-      const container = pcontainer.querySelector('.row');
-      fetch("./crawler/ERJ/erj_data.json")
-      .then(response => {return response.json()})
-      .then(data => {
-         let imagesPerColumn = data.length/3;
-         var column = []
-         for (var i=0;i<3;i++){
-            column[i] = document.createElement('div');
-            column[i].className = "column";
-         }
-         
-         for (var i=0; i<data.length; i++){
-            let div = document.createElement('div');
-            div.className="card"; 
-            div.innerHTML=
-            `
-            <div class="image">
-               <img src="${data[i].Link}" alt="image">
-            </div>
-            <div class="img-text">
-               <div class="img-description">${data[i].Title}</div>
-            </div>
-            `
-            column[i%3].appendChild(div);
-         };
-         
-         for (var i=0;i<3;i++){
-            container.appendChild(column[i])
-         }
-      })
+      displayImages("./crawler/ERJ/erj_data.json");
    </script>
 </html>
