--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                <a href="view/website2.html">Website 2</a>
                <a href="view/website3.html">Website 3</a>
                <a href="view/website4.html">Website 4</a>
-               <a>Website 5</a>
+               <a href="view/website5.html">Website 5</a>
             </div>
          </div>
 
