Update project page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                <div class="navbar right">
                   <a href="index.html" class="active">Home</a>
                   <a href="view/about.html">About Us</a>
-                  <a>Project</a>
+                  <a href="view/project.html">Project</a>
                </div>
             </div>
             
