--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                <a href="view/website4.html">Website 4</a>
                <a href="view/website5.html">Website 5</a>
                <a href="view/website6.html">Website 6</a>
+               <a href="view/website7.html">Website 7</a>
             </div>
          </div>
 
