Update name in navbar (#11)

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
          <div class="row">
             <div class="navbar">
-               <a href="index.html" class="active">Website 1</a>
-               <a href="view/website2.html">Website 2</a>
-               <a href="view/website3.html">Website 3</a>
-               <a href="view/website4.html">Website 4</a>
-               <a href="view/website5.html">Website 5</a>
-               <a href="view/website6.html">Website 6</a>
-               <a href="view/website7.html">Website 7</a>
+               <a href="index.html" class="active">ERJ</a>
+               <a href="view/website2.html">NCBI</a>
+               <a href="view/website3.html">Radiopaedia</a>
+               <a href="view/website4.html">Yandex</a>
+               <a href="view/website5.html">Duckduckgo</a>
+               <a href="view/website6.html">Wikimedia</a>
+               <a href="view/website7.html">Emedicine</a>
             </div>
          </div>
 
