Change font title

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
       <title>CT Lung Cancer</title>
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
       <link href='view/style.css' rel='stylesheet'>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    </head>
@@ -17,7 +18,7 @@
                   <a href="view/project.html">Project</a>
                </div>
             </div>
-            
+
             <div class="row">
                <div class="title">CT Lung Cancer Image</div>
             </div>
@@ -86,7 +87,7 @@
                   displayImages("./crawler/emedicine/emedicine.json");
                   break;
                }
-            } 
+            }
          })
       }
    </script>
