--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                <a class="source">Yandex</a>
                <a class="source">Duckduckgo</a>
                <a class="source">Wikimedia</a>
-               <a class="source">Emedicine</a>
+               <a class="source">PMC</a>
             </div>
          </div>
 
@@ -83,8 +83,8 @@
                   displayImages("./crawler/multiplesources/one/spiders/wikimedia.json");
                   break;
                }
-               case "Emedicine":{
-                  displayImages("./crawler/emedicine/emedicine.json");
+               case "PMC":{
+                  displayImages("./crawler/PMC/test2.json");
                   break;
                }
             }
