Update the source openi

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                <a class="source">Duckduckgo</a>
                <a class="source">Wikimedia</a>
                <a class="source">PMC</a>
+               <a class="source">OpenI</a>
             </div>
          </div>
 
@@ -86,6 +87,9 @@
                case "PMC":{
                   displayImages("./crawler/PMC/test2.json");
                   break;
+               }
+               case "OpenI":{
+                  displayImages("./crawler/openi/openi.json")
                }
             }
          })
