Forgot the break line of index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                   break;
                }
                case "OpenI":{
-                  displayImages("./crawler/openi/openi.json")
+                  displayImages("./crawler/openi/openi.json");
+                  break;
                }
             }
          })
