Replace json file in openi

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   break;
                }
                case "OpenI":{
-                  displayImages("./crawler/openi/openi.json");
+                  displayImages("./crawler/openi/openiV2.json");
                   break;
                }
             }
