--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
          </div>
 
          <div class="row">
-            <div class="content gallery">
-               <div class="row"></div>
-            </div>
+            <div class="content gallery"></div>
          </div>
       </div>
    </body>
@@ -59,6 +57,7 @@
 
             // Set display
             $('.card').remove();
+            $('.column').remove();
             switch(this.innerHTML){
                case "ERJ":{
                   displayImages("./crawler/ERJ/erj_data.json");
