--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
          <div class="row">
             <div class="navbar">
-               <a class="source">ERJ</a>
+               <a class="source active">ERJ</a>
                <a class="source">NCBI</a>
                <a class="source">Radiopaedia</a>
                <a class="source">Yandex</a>
@@ -46,12 +46,13 @@
    <script src="view/displayImages.js"></script>
    <script>
       displayImages("./crawler/ERJ/erj_data.json");
-      const navlink = document.getElementsByClassName('source');
+      const navbar = document.getElementsByClassName('navbar')[1];
+      const navlink = navbar.getElementsByClassName('source');
 
       for (var i=0; i<navlink.length; i++){
          navlink[i].addEventListener("click", function(){
             // Set active state
-            var current = document.querySelector('.active');
+            var current = navbar.querySelector('.active');
             current.className = current.className.replace("active", "");
             this.className = (this.className += " active");
 
