Change Yandex as default page

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
          <div class="row">
             <div class="navbar">
-               <a class="source active">ERJ</a>
+               <a class="source active">Yandex</a>
+               <a class="source">ERJ</a>
                <a class="source">NCBI</a>
                <a class="source">Radiopaedia</a>
-               <a class="source">Yandex</a>
                <a class="source">Duckduckgo</a>
                <a class="source">Wikimedia</a>
                <a class="source">PMC</a>
@@ -45,7 +45,7 @@
 
    <script src="view/displayImages.js"></script>
    <script>
-      displayImages("./crawler/ERJ/erj_data.json");
+      displayImages("./crawler/multiplesources/one/spiders/yandex.json");
       const navbar = document.getElementsByClassName('navbar')[1];
       const navlink = navbar.getElementsByClassName('source');
 
